force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Account__c.field-meta.xml
<CustomField>
    <fullName>AVO_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>