force-app/main/default/objects/AVO_Compliance__c/fields/AVO_AcresOutOfProduction__c.field-meta.xml
<CustomField>
    <fullName>AVO_AcresOutOfProduction__c</fullName>
    <label>AcresOutOfProduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>