force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Are_You_The_Owner__c.field-meta.xml
<CustomField>
    <fullName>AVO_Are_You_The_Owner__c</fullName>
    <formula>$User.Id =  OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Are You The Owner?</label>
    <type>Checkbox</type>
</CustomField>