force-app/main/default/objects/AVO_Compliance__c/fields/AVO_AssignedBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_AssignedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssignedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliances1</relationshipName>
    <type>Lookup</type>
</CustomField>