force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Basin__c.field-meta.xml
<CustomField>
    <fullName>AVO_Basin__c</fullName>
    <label>Basin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALTAMAHA</fullName>
            </value>
            <value>
                <fullName>CHATTAHOOCHEE</fullName>
            </value>
            <value>
                <fullName>COOSA</fullName>
            </value>
            <value>
                <fullName>FLINT</fullName>
            </value>
            <value>
                <fullName>OCHLOCKONEE</fullName>
            </value>
            <value>
                <fullName>OCMULGEE</fullName>
            </value>
            <value>
                <fullName>OCONEE</fullName>
            </value>
            <value>
                <fullName>OGEECHEE</fullName>
            </value>
            <value>
                <fullName>SAINT MARYS</fullName>
            </value>
            <value>
                <fullName>SATILLA</fullName>
            </value>
            <value>
                <fullName>SAVANNAH</fullName>
            </value>
            <value>
                <fullName>SUWANNEE</fullName>
            </value>
            <value>
                <fullName>TALLAPOOSA</fullName>
            </value>
            <value>
                <fullName>TENNESSEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>