force-app/main/default/objects/AVO_Compliance__c/fields/AVO_CaseClass__c.field-meta.xml
<CustomField>
    <fullName>AVO_CaseClass__c</fullName>
    <label>CaseClass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permit Violations Compliance Case</fullName>
            </value>
            <value>
                <fullName>WWSA Compliance Case</fullName>
            </value>
            <value>
                <fullName>Meter Compliance Case</fullName>
            </value>
            <value>
                <fullName>Non-Initialized Use Case</fullName>
            </value>
            <value>
                <fullName>Statutory Compliance Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>