force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Coastal24__c.field-meta.xml
<CustomField>
    <fullName>AVO_Coastal24__c</fullName>
    <inlineHelpText>Populate with Values from  &quot;No; Con; Cap; Res&quot;</inlineHelpText>
    <label>Coastal24</label>
    <length>255</length>
    <type>Text</type>
</CustomField>