force-app/main/default/objects/AVO_Compliance__c/fields/AVO_COCompPlanAppBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_COCompPlanAppBy__c</fullName>
    <label>COCompPlanAppBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>