force-app/main/default/objects/AVO_Compliance__c/fields/AVO_COFineAmount__c.field-meta.xml
<CustomField>
    <fullName>AVO_COFineAmount__c</fullName>
    <label>COFineAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>