force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Comments__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>