force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Comp_Ref__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comp_Ref__c</fullName>
    <label>Comp_Ref</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AVO_CaseClass__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>AVO_Comp_Ref_Types</valueSetName>
    </valueSet>
</CustomField>