force-app/main/default/objects/AVO_Compliance__c/fields/AVO_CompAction__c.field-meta.xml
<CustomField>
    <fullName>AVO_CompAction__c</fullName>
    <label>CompAction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved AO Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Approved CO Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Approved NOV Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Case Closed</fullName>
            </value>
            <value>
                <fullName>Declined AO Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Declined CO Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Declined NOV Compliance Plan</fullName>
            </value>
            <value>
                <fullName>Fine Payment for Administrative Order</fullName>
            </value>
            <value>
                <fullName>Fine Payment for Consent Order</fullName>
            </value>
            <value>
                <fullName>Initiate Case</fullName>
            </value>
            <value>
                <fullName>Issued Administrative Order</fullName>
            </value>
            <value>
                <fullName>Issued Consent Order</fullName>
            </value>
            <value>
                <fullName>Issued Letter of Noncompliance</fullName>
            </value>
            <value>
                <fullName>Issued Notice of Violation</fullName>
            </value>
            <value>
                <fullName>Issued Request for Information Letter</fullName>
            </value>
            <value>
                <fullName>Non-Initialized Use Case Tracking</fullName>
            </value>
            <value>
                <fullName>Ready To Permit</fullName>
            </value>
            <value>
                <fullName>Recommended Administrative Order</fullName>
            </value>
            <value>
                <fullName>Recommended Compliance Case Closure</fullName>
            </value>
            <value>
                <fullName>Recommended Consent Order</fullName>
            </value>
            <value>
                <fullName>Recommended Notice of Violation</fullName>
            </value>
            <value>
                <fullName>Recommended Request for Information Letter</fullName>
            </value>
            <value>
                <fullName>Re-Issued Administrative Order</fullName>
            </value>
            <value>
                <fullName>Re-Issued Consent Order</fullName>
            </value>
            <value>
                <fullName>Re-Issued Notice of Violation</fullName>
            </value>
            <value>
                <fullName>Re-Issued Request for Information Letter</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>Site Visit Recommended</fullName>
            </value>
            <value>
                <fullName>Site Visit Requested</fullName>
            </value>
            <value>
                <fullName>Submitted AO Compliance Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>