force-app/main/default/objects/AVO_Compliance__c/fields/AVO_CompNum__c.field-meta.xml
<CustomField>
    <fullName>AVO_CompNum__c</fullName>
    <label>CompNum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>