force-app/main/default/objects/AVO_Compliance__c/fields/AVO_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <type>DateTime</type>
</CustomField>