force-app/main/default/objects/AVO_Compliance__c/fields/AVO_DataFrom__c.field-meta.xml
<CustomField>
    <fullName>AVO_DataFrom__c</fullName>
    <label>AVO_DataFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>