force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Date_Due__c.field-meta.xml
<CustomField>
    <fullName>AVO_Date_Due__c</fullName>
    <label>Date Due</label>
    <type>DateTime</type>
</CustomField>