force-app/main/default/objects/AVO_Compliance__c/fields/AVO_DateAssigned__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateAssigned__c</fullName>
    <label>DateAssigned</label>
    <type>Date</type>
</CustomField>