force-app/main/default/objects/AVO_Compliance__c/fields/AVO_DateOfAction__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateOfAction__c</fullName>
    <label>DateOfAction</label>
    <type>DateTime</type>
</CustomField>