force-app/main/default/objects/AVO_Compliance__c/fields/AVO_DateUpdated__c.field-meta.xml
<CustomField>
    <fullName>AVO_DateUpdated__c</fullName>
    <label>DateUpdated</label>
    <type>DateTime</type>
</CustomField>