force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Describe_the_issue_for_assistance__c.field-meta.xml
<CustomField>
    <fullName>AVO_Describe_the_issue_for_assistance__c</fullName>
    <label>Describe the issue for assistance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>