force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Document__c.field-meta.xml
<CustomField>
    <fullName>AVO_Document__c</fullName>
    <label>Document</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GW</fullName>
            </value>
            <value>
                <fullName>Meter Tampering</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater ACRES</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater</fullName>
            </value>
            <value>
                <fullName>Undocumented Surface water Acres</fullName>
            </value>
            <value>
                <fullName>Undcoumented surface water</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Excess Acres</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Use</fullName>
            </value>
            <value>
                <fullName>WTP</fullName>
            </value>
            <value>
                <fullName>Consent Order</fullName>
            </value>
            <value>
                <fullName>Administrative Order</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>Expired LOC</fullName>
            </value>
            <value>
                <fullName>Permit Transfer Request</fullName>
            </value>
            <value>
                <fullName>Meter Installation Needed</fullName>
            </value>
            <value>
                <fullName>Expiring LOC</fullName>
            </value>
            <value>
                <fullName>Permit Missing Form</fullName>
            </value>
            <value>
                <fullName>Unpermitted Surface Water Use</fullName>
            </value>
            <value>
                <fullName>Unpermitted Surface Water Use Excess Acres</fullName>
            </value>
            <value>
                <fullName>NOV Meter Installation Needed</fullName>
            </value>
            <value>
                <fullName>RFI Meter Tampering</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>