force-app/main/default/objects/AVO_Compliance__c/fields/AVO_ExcessGPM__c.field-meta.xml
<CustomField>
    <fullName>AVO_ExcessGPM__c</fullName>
    <label>ExcessGPM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>