force-app/main/default/objects/AVO_Compliance__c/fields/AVO_FRBP__c.field-meta.xml
<CustomField>
    <fullName>AVO_FRBP__c</fullName>
    <inlineHelpText>Populate with values from Y, G, N, R</inlineHelpText>
    <label>FRBP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>