force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>