force-app/main/default/objects/AVO_Compliance__c/fields/AVO_GIS_CompRefNo__c.field-meta.xml
<CustomField>
    <fullName>AVO_GIS_CompRefNo__c</fullName>
    <label>GIS_CompRefNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>