force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>AVO_Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>