force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Irrigated_Acres__c.field-meta.xml
<CustomField>
    <fullName>AVO_Irrigated_Acres__c</fullName>
    <label>Irrigated Acres</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>