force-app/main/default/objects/AVO_Compliance__c/fields/AVO_IrrInstallDate__c.field-meta.xml
<CustomField>
    <fullName>AVO_IrrInstallDate__c</fullName>
    <label>IrrInstallDate</label>
    <type>Date</type>
</CustomField>