force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Is_Consent_Order__c.field-meta.xml
<CustomField>
    <fullName>AVO_Is_Consent_Order__c</fullName>
    <label>Is Consent Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>