force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Latitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_Latitude__c</fullName>
    <label>Latitude</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>