force-app/main/default/objects/AVO_Compliance__c/fields/AVO_LockBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_LockBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LockBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Compliances2</relationshipName>
    <type>Lookup</type>
</CustomField>