force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Locked__c.field-meta.xml
<CustomField>
    <fullName>AVO_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>