force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Longitude__c.field-meta.xml
<CustomField>
    <fullName>AVO_Longitude__c</fullName>
    <label>Longitude</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>