force-app/main/default/objects/AVO_Compliance__c/fields/AVO_LuOwnerO_wnerContactId__c.field-meta.xml
<CustomField>
    <fullName>AVO_LuOwnerO_wnerContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LuOwner_OwnerContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>