force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Meeting_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meeting_Comment__c</fullName>
    <label>Meeting Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>