force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Merge_Field_Object__c.field-meta.xml
<CustomField>
    <fullName>AVO_Merge_Field_Object__c</fullName>
    <formula>IF(NOT(ISBLANK(AVO_RefApplicationID__c)), &quot;Permit Application&quot;, 
    IF(NOT(ISBLANK(AVO_RefMeterID__c)), &quot;Meter&quot;, 
        IF(NOT(ISBLANK(AVO_RefMSNID__c)), &quot;Meter&quot;, 
        IF(NOT(ISBLANK(AVO_RefPermitAppID__c)), &quot;Permit&quot;, 
            null
        )
    )
)
)</formula>
    <label>Merge Field Object</label>
    <type>Text</type>
</CustomField>