force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Meter_Serial_Num__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Serial_Num__c</fullName>
    <label>Meter_Serial_Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>