force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Misc__c.field-meta.xml
<CustomField>
    <fullName>AVO_Misc__c</fullName>
    <label>Misc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>