force-app/main/default/objects/AVO_Compliance__c/fields/AVO_MOSID__c.field-meta.xml
<CustomField>
    <fullName>AVO_MOSID__c</fullName>
    <label>MOSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>