force-app/main/default/objects/AVO_Compliance__c/fields/AVO_NOV_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_NOV_Type__c</fullName>
    <label>NOV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GW</fullName>
            </value>
            <value>
                <fullName>Meter Tampering</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater ACRES</fullName>
            </value>
            <value>
                <fullName>Undocumented Groundwater</fullName>
            </value>
            <value>
                <fullName>Undocumented Surface water Acres</fullName>
            </value>
            <value>
                <fullName>Undcoumented surface water</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Excess Acres</fullName>
            </value>
            <value>
                <fullName>Unpermitted Groundwater Use</fullName>
            </value>
            <value>
                <fullName>WTP</fullName>
            </value>
            <value>
                <fullName>NOV Meter Installation Needed</fullName>
            </value>
            <value>
                <fullName>Unpermitted Surface Water Use</fullName>
            </value>
            <value>
                <fullName>Unpermitted Surface Water Use Excess Acres</fullName>
            </value>
            <value>
                <fullName>No Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>