force-app/main/default/objects/AVO_Compliance__c/fields/AVO_NOVCompPlanAppBy__c.field-meta.xml
<CustomField>
    <fullName>AVO_NOVCompPlanAppBy__c</fullName>
    <label>NOVCompPlanAppBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>