force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Owner_Name__c</fullName>
    <label>Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>