force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Parent_Permit_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Parent_Permit_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this Compliance is on a Revision, this field will contain the ID of the parent Permit of that Revision.</description>
    <label>Parent Permit ID</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Revision Compliances</relationshipLabel>
    <relationshipName>Compliances4</relationshipName>
    <type>Lookup</type>
</CustomField>