force-app/main/default/objects/AVO_Compliance__c/fields/AVO_Path_to_Resolution__c.field-meta.xml
<CustomField>
    <fullName>AVO_Path_to_Resolution__c</fullName>
    <description>This categorizes how easy/hard the compliance case will be to resolve and what the path to the resolution will be.</description>
    <label>Path to Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on Permit Action</fullName>
            </value>
            <value>
                <fullName>No Solution Found</fullName>
            </value>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Proposal Under Review</fullName>
            </value>
            <value>
                <fullName>Drought Conditions</fullName>
            </value>
            <value>
                <fullName>Volumetric Limit</fullName>
            </value>
            <value>
                <fullName>Drought Conditioned Permit</fullName>
            </value>
            <value>
                <fullName>Non-Drought Conditioned Permit</fullName>
            </value>
            <value>
                <fullName>Acre Trading</fullName>
            </value>
            <value>
                <fullName>Acre Trading, Drought Conditions or Volumetric</fullName>
            </value>
            <value>
                <fullName>Remove Unpermitted Source</fullName>
            </value>
            <value>
                <fullName>Submit Application</fullName>
            </value>
            <value>
                <fullName>Submit Missing Forms</fullName>
            </value>
            <value>
                <fullName>Install or Fix Well Pad</fullName>
            </value>
            <value>
                <fullName>Plug and Abandon Well</fullName>
            </value>
            <value>
                <fullName>Install a Meter</fullName>
            </value>
            <value>
                <fullName>Flow Test Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>