force-app/main/default/objects/AVO_Compliance__c/fields/AVO_RefApplicationID__c.field-meta.xml
<CustomField>
    <fullName>AVO_RefApplicationID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefApplicationID</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>RefApplicationID must refer to a Permit Application.</errorMessage>
        <filterItems>
            <field>MUSW__Permit2__c.MUSW__Type__c</field>
            <operation>equals</operation>
            <value>Agricultural Water Withdrawal Application</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Compliances (RefApplicationID)</relationshipLabel>
    <relationshipName>Compliances3</relationshipName>
    <type>Lookup</type>
</CustomField>