force-app/main/default/objects/AVO_Compliance__c/fields/AVO_RefMeterID__c.field-meta.xml
<CustomField>
    <fullName>AVO_RefMeterID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefMeterID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>