force-app/main/default/objects/AVO_Compliance__c/fields/AVO_RefMSNID__c.field-meta.xml
<CustomField>
    <fullName>AVO_RefMSNID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RefMSNID</label>
    <referenceTo>AVO_Meter__c</referenceTo>
    <relationshipLabel>Compliances</relationshipLabel>
    <relationshipName>Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>